Week3/3.4/01-nsg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "NSG1Name": {
        "type": "string",
        "defaultValue": "nsg-007-szkolachmury-dev-001",
        "metadata": {
          "description": "NSG 1 Name"
        }
        
      },
        "NSG2Name": {
        "type": "string",
        "defaultValue": "nsg-007-szkolachmury-dev-002",
        "metadata": {
          "description": "NSG 2 Name"
        }
        
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      }
    },
  
  
    "variables": {},
    "resources": [
       {
        "apiVersion": "2015-05-01-preview",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('NSG1Name')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "sshallow",
              "properties": {
                "description": "Allows inbound SSH traffic",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            }
          ]
        }
      },
  
      {
        "apiVersion": "2015-05-01-preview",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('NSG2Name')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "sshallow",
              "properties": {
                "description": "Allows inbound SSH traffic",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            }
          ]
        }
      
      }
  
  
    ]
  }
